--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "posthog-js": "^1.142.0",
     "react": "^18",
     "react-dom": "^18",
     "survey-analytics": "^1.11.3",
